Rewrote game instructions

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <div>
     <progress value="100" max="100"></progress>
   </div>
-  <h2>✨ Collect plankton to give your Fishy strength! ✨<br/>Click your mouse for a magical mermaid to temporarily distract the sharks 👀 🦈 <br/> But beware, this comes with a cost-- five new sharks will appear!<br/> Press the space bar to kill sharks if
-    you find yourself in an emergency!</h2>
-  <h3>Score: <span id="score">1</span></h3>
+  <h2>Could you help fishie survive the dangerous oceans?!
+    </br>With the help of your magical mermaid friend distracting the sharks with her ravenous beauty, you can eat your favorite food, plankton, and grow strong with more energy!
+    </br>Let’s see how long you can last in the deep waters, good luck on this adventure!
+  </h2>
+  <h3>Score: <span id="score"></span></h3>
   <div id="gameOver"></div>
 </body>
