--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <div>
     <progress value="100" max="100"></progress>
   </div>
-  <h2>Could you help fishie survive the dangerous oceans?!
-    </br>With the help of your magical mermaid friend distracting the sharks with her ravenous beauty, you can eat your favorite food, plankton, and grow strong with more energy!
+  <h2>Can you help the fishie survive the dangerous oceans?!
+    </br>Click your mouse to enlist help from your magical mermaid friend who distracts the sharks with her ravenous beauty!
+    </br>In the meantime, Plankton from Spongebob will appear to help you gain health!
     </br>Let’s see how long you can last in the deep waters, good luck on this adventure!
   </h2>
   <h3>Score: <span id="score"></span></h3>
