--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <progress value="100" max="100"></progress>
   </div>
   <h2>Can you help the fishie survive the dangerous oceans?!
-    </br>Click your mouse to enlist help from your magical mermaid friend who distracts the sharks with her ravenous beauty!
-    </br>In the meantime, Plankton from Spongebob will appear to help you gain health!
+    </br>Click your mouse to enlist help from the mermaid who distracts the sharks with her beauty and Plankton from Spongebob who will give you health!
+    </br>Beware, their help comes with a cost-- 5 new sharks!
+    </br>If you find yourself in an emergency, press the space bar to eliminate a shark!
     </br>Let’s see how long you can last in the deep waters, good luck on this adventure!
   </h2>
   <h3>Score: <span id="score"></span></h3>
