--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <div>
     <progress value="100" max="100"></progress>
   </div>
-  <h2>Can you help the fishie survive the dangerous oceans?!
+  <h2>Can you help the fishy survive the dangerous oceans?!
     </br>Click your mouse to enlist help from your magical mermaid friend who distracts the sharks with her ravenous beauty and Plankton from Spongebob who gives you health!
     </br>Beware, their help comes with a cost-- 5 new sharks!
     </br>If you find yourself in an emergency, press the space bar to eliminate a shark!
