--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<body>
+<!DOCTYPE html>
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
+    <link rel=¨stylesheet¨ type=¨text/css¨ href=¨index.css¨>
+  </head>
+  <body>
   <h1>Swishy Fishy</h1>
   <div>
     <progress value="100" max="100"></progress>
@@ -11,4 +16,5 @@
   </h2>
   <h3>Score: <span id="score"></span></h3>
   <div id="gameOver"></div>
+  <script type="text/javascript" src="index.js"></script>
 </body>
